fix for off center artist header

--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -3281,6 +3281,7 @@ input[type="range"].web-slider.display--small::-webkit-slider-thumb {
 
     .header-content {
       z-index: 1;
+      margin-top: -16px;
     }
 
 
@@ -3341,7 +3342,6 @@ input[type="range"].web-slider.display--small::-webkit-slider-thumb {
     width: 200px;
     height: 200px;
     margin: 32px;
-    margin-top: -5px;
     position: relative;
 
     .overlay-play {
